--- a/src/css/container.css
+++ b/src/css/container.css
@@ -41,8 +41,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: paleturquoise;
+    background-color: plum;
     left: 50%;
     top: 40%;
     transform: translate(-50%, -50%);
+    border-radius: 20px 10px;
 }
