Map and markers are added

--- a/src/css/button.css
+++ b/src/css/button.css
@@ -2,7 +2,7 @@
     border: none;
     background-color: orange;
     font-weight: bold;
-    font-size: 80%;
+    font-size: 1vw;
     text-align: center;
     text-decoration: none;
     height: 75%;
