--- a/src/css/container.css
+++ b/src/css/container.css
@@ -2,6 +2,7 @@
     background-color: darkgreen;
     height: 100%;
     width: 100%;
+    overflow-y:scroll
 }
 
 .block1 {
@@ -16,7 +17,7 @@
 
 .block2 {
     background-color: red;
-    height: 100%;
+    height: inherit;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -32,6 +33,7 @@
     background-color: blueviolet;
     height: 100%;
     width: 25%;
+    overflow: scroll;
 }
 
 .formContainer {
