--- a/src/css/container.css
+++ b/src/css/container.css
@@ -2,7 +2,7 @@
     background-color: darkgreen;
     height: 100%;
     width: 100%;
-    overflow-y:scroll
+    overflow-y: scroll
 }
 
 .block1 {
@@ -34,6 +34,11 @@
     height: 100%;
     width: 25%;
     overflow: scroll;
+}
+
+.mapBlockStyle {
+    height: 100%;
+    width: 100%;
 }
 
 .formContainer {
