--- a/src/css/button.css
+++ b/src/css/button.css
@@ -12,15 +12,18 @@
     transition-duration: 0.4s;
     cursor: pointer;
 }
-.buttonDefault{
+
+.buttonDefault {
     background-color: orange;
     color: black;
     border: 2px solid orange;
 }
-.buttonDefault:hover{
+
+.buttonDefault:hover {
     background-color: white;
     color: darkorange;
 }
+
 .close {
     position: absolute;
     right: 32px;
@@ -28,10 +31,14 @@
     width: 32px;
     height: 32px;
     opacity: 0.3;
+    border: none;
+    background-color: unset;
 }
+
 .close:hover {
     opacity: 1;
 }
+
 .close:before, .close:after {
     position: absolute;
     left: 15px;
@@ -39,10 +46,13 @@
     height: 33px;
     width: 2px;
     background-color: #333;
+    top: 0px;
 }
+
 .close:before {
     transform: rotate(45deg);
 }
+
 .close:after {
     transform: rotate(-45deg);
 }
