--- a/src/css/form.css
+++ b/src/css/form.css
@@ -6,6 +6,7 @@
     width: 100%;
     margin-left: 10%;
 }
+
 .inputButton {
     font-size: 15px;
     font-weight: bold;
@@ -15,10 +16,13 @@
     border-radius: 20px;
     cursor: pointer;
 }
+
 .inputField {
     width: 90%;
     height: 20px;
 }
-.lableField{
+
+.labelField {
     width: 100%;
+    font-size: 14px;
 }
