--- a/src/css/form.css
+++ b/src/css/form.css
@@ -1,7 +1,7 @@
 .formSelf {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     font-size: 18px;
     width: 100%;
     padding-left: 10%;
@@ -11,7 +11,7 @@
 .inputButton {
     font-size: 15px;
     font-weight: bold;
-    margin: 5% 0 0 20%;
+    margin: 5% 0 0 0%;
     background-color: burlywood;
     height: 35px;
     border-radius: 20px;
@@ -25,13 +25,13 @@
 
 .labelField {
     width: 100%;
-    font-size: 14px;
-    height: 7vh;
+    font-size: 3vh;
+    height: 8vh;
     padding-top: 1vh;
 }
 
 .form-control{
     font-size: 2vh;
     height: 5vh;
-    margin-top: 10%;
+    margin-top: 6%;
 }
